--- a/_sources/content/fMRI_Sequences.ipynb
+++ b/_sources/content/fMRI_Sequences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b3ab7f51",
+   "id": "c20f5a1c",
    "metadata": {},
    "source": [
     "# Multi-Echo fMRI Sequences\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b2e5e8cc",
+   "id": "c17a7eee",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -22,13 +22,14 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "from myst_nb import glue"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f3dcb4c4",
+   "id": "5feee76a",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2bf3a5f",
+   "id": "effa21ad",
    "metadata": {},
    "source": [
     "## A simplified fMRI pulse sequence"
@@ -134,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a7debde3",
+   "id": "49efdfae",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -143,13 +144,13 @@
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'glue' is not defined",
+     "evalue": "name 'fig' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m20\u001b[39m,\u001b[38;5;241m8\u001b[39m))\n\u001b[1;32m      3\u001b[0m create_simple_pulse_seq([\u001b[38;5;241m28\u001b[39m], read_time\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m17.347\u001b[39m, n_acq\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, title\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAcquiring an fMRI volume\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[43mglue\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfig_sample_pulse_seq\u001b[39m\u001b[38;5;124m\"\u001b[39m, fig, display\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'glue' is not defined"
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m20\u001b[39m,\u001b[38;5;241m8\u001b[39m))\n\u001b[1;32m      2\u001b[0m create_simple_pulse_seq([\u001b[38;5;241m28\u001b[39m], read_time\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m17.347\u001b[39m, n_acq\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, title\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAcquiring an fMRI volume\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m glue(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfig_sample_pulse_seq\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mfig\u001b[49m, display\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fig' is not defined"
      ]
     },
     {
@@ -165,22 +166,20 @@
    ],
    "source": [
     "plt.figure(figsize=(20,8))\n",
-    "\n",
     "create_simple_pulse_seq([28], read_time=17.347, n_acq=10, title=\"Acquiring an fMRI volume\")\n",
-    "\n",
     "glue(\"fig_sample_pulse_seq\", fig, display=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d52f3413",
+   "id": "5a8ab72e",
    "metadata": {},
    "source": [
     "```{glue:figure} fig_sample_pulse_seq\n",
     ":name: fig_sample_pulse_seq\n",
     ":align: center\n",
     "\n",
-    "A simplified fMRI pulse sequence\n",
+    "A simplified fMRI pulse sequence.\n",
     "```\n",
     "\n",
     "For the purposes of understanding multi-echo fMRI,\n",
@@ -221,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb7ff6b6",
+   "id": "17340079",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -245,14 +244,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f8fb5f7",
+   "id": "82b22eb6",
    "metadata": {},
    "source": [
     "```{glue:figure} fig_sample_multiecho_pulse_seq\n",
     ":name: fig_sample_multiecho_pulse_seq\n",
     ":align: center\n",
     "\n",
-    "A sample multi-echo fMRI pulse sequence\n",
+    "A sample multi-echo fMRI pulse sequence.\n",
     "```"
    ]
   }
@@ -286,12 +285,12 @@
   "source_map": [
    12,
    18,
-   24,
-   111,
-   115,
-   123,
-   166,
-   181
+   25,
+   112,
+   116,
+   121,
+   164,
+   179
   ]
  },
  "nbformat": 4,
