--- a/_sources/content/fMRI_Sequences.ipynb
+++ b/_sources/content/fMRI_Sequences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d6704e69",
+   "id": "6bfc8b18",
    "metadata": {},
    "source": [
     "# Multi-Echo fMRI Sequences\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9c8f3ae5",
+   "id": "df5a565f",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9f676dc2",
+   "id": "fcf297c3",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "943e7217",
+   "id": "5289eb7b",
    "metadata": {},
    "source": [
     "## A simplified fMRI pulse sequence"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "663e5259",
+   "id": "82944d4a",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08db48b4",
+   "id": "3972a46c",
    "metadata": {},
    "source": [
     "```{glue:figure} fig_sample_pulse_seq\n",
@@ -174,16 +174,16 @@
     "For the purposes of understanding multi-echo fMRI,\n",
     "an fMRI pulse sequence has two main parts.\n",
     "The excitation pulse (black) and the readout (green).\n",
-    "The excitation pulse sends out a radio frequence pulse that excites protons at a resonance frequency\n",
+    "The excitation pulse sends out a radio frequency pulse that excites protons at a resonance frequency\n",
     "(The \"resonance\" part of Magnetic Resonance Imaging).\n",
-    "The readout period (green) is when the magnetic oscillates\n",
+    "The readout period (green) is when the gradient magnets oscillate\n",
     "to acquire data across a portion of k-space.\n",
     "In a typical fMRI study, each excitation pulse excites protons in\n",
     "one slice or several slices of the brain,\n",
     "and then the readout period collects data from those slice(s).\n",
     "Multiple excitation pulses and readout windows are necessary to collect a full volume.\n",
     "In this figure, there are 10 excitation pulses.\n",
-    "If 4 slices were collected with each excitation pulse,\n",
+    "If 4 slices were collected with each excitation pulse\n",
     "(called simultaneous multislice, multiband, or hyperband imaging),\n",
     "this figure represents acquiring 40 slices.\n",
     "In this example, each excitation + readout cycle takes around 37ms,\n",
@@ -201,7 +201,7 @@
     "Also note that the readout period is not instantaneous.\n",
     "It takes time to have the magnetic gradients to move around in ways that collect the desired information across k-space.\n",
     "The TE is the center of this readout period.\n",
-    "In this figure, the TE is 28ms, but the readout period is acquiring data from around 19-36ms.\n",
+    "In this figure, the TE is 28ms, but data is acquire during the readout period from around 19-36ms.\n",
     "\n",
     "## A multi-echo fMRI pulse sequence"
    ]
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4ced3168",
+   "id": "b2b5089e",
    "metadata": {
     "tags": [
      "hide-cell"
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2e748d7",
+   "id": "bf8cc3ad",
    "metadata": {},
    "source": [
     "```{glue:figure} fig_sample_multiecho_pulse_seq\n",
@@ -252,7 +252,64 @@
     ":align: center\n",
     "\n",
     "A sample multi-echo fMRI pulse sequence.\n",
-    "```"
+    "```\n",
+    "\n",
+    "The top plot in the above figure shows two cycles of single echo acquisition.\n",
+    "The middle figure shows the same readout duration, but with 3 acquired echoes.\n",
+    "Instead of the gap between the excitation pulse and a single echo,\n",
+    "the same readout pattern is repeated 3 time as quickly as possible.\n",
+    "This results in data to create 3 images from every excitation pulse.\n",
+    "The key benefit of this is,\n",
+    "instead of having a single echo at what is expected to be the optimal TE for BOLD constrast,\n",
+    "there are multiple echoes that can be fit to a model of how BOLD constrast is expected to evolve over time.\n",
+    "\n",
+    "Note that the first echo can often fit mostly within the intial gap and is essentially free.\n",
+    "There are some methods and use and benefit from just 2 echoes {cite:t}`bright2013removing`.\n",
+    "\n",
+    "The third echo noticabily expands the time between two excitation pulses.\n",
+    "This means, if no other parameters change, the TR will be longer to acquire 3 echoes vs single echo data\n",
+    "and even longer if more than 3 echoes are acquired.\n",
+    "\n",
+    "Acquiring multi-echo fMRI data typcially requires mild compromises on other parameters.\n",
+    "This can include a mix of:\n",
+    "\n",
+    "- Longer TR\n",
+    "- Fewer slices\n",
+    "- Larger voxels: shorter readout time\n",
+    "- More in-slice accelleration (sometimes called GRAPPA, iPat, or ASSET): shorter readout time\n",
+    "\n",
+    "The bottom figure above has identical parameters, but uses GRAPPA=3 inslice acceleration instead of GRAPPA=2.\n",
+    "With just this change, the readout time for each echo has a shorter duration\n",
+    "and the TR is nearly identical to the single echo example.\n",
+    "Continuing on this example, in-slice acceleration has a cost.\n",
+    "The Signal to Noise Ratio (SNR) for fMRI data drops roughly by the square root of the acceleration factor.\n",
+    "That is GRAPPA=2 has an SNR reduction of roughly $\\sqrt{2}$.\n",
+    "That means going from GRAPPA=2 to GRAPPA=3 has an SNR reduction of $\\sqrt{3}-\\sqrt{2}$.\n",
+    "\n",
+    "Collecting 3 echoes and just averaging them together gives an SNR increase that is close to $\\sqrt{3}$ is this is a net positive even without any fancier multi-echo denoising approaches.\n",
+    "More acceleration and faster readouts also means all the data is acquired closer to the desired echo time,\n",
+    "and a faster readout often means less distortion.\n",
+    "That said, more acceleration can also results in more MRI artifacts,\n",
+    "so it is critial to collect data to evaluate parameters before collecting data for a full study.\n",
+    "\n",
+    "One additional consideration is why the readout windows are the length they are.\n",
+    "This is partially the limits of the MRI hardware.\n",
+    "The readout gradients are rapidly changing magnetic fields using electromagnets.\n",
+    "There are limits to how fast a given system can alter electric currents to drive these magnetic field changes without overheating.\n",
+    "A second key factor is that a rapidly changing magnetic field surrounding a conductive material can generate electric current in that material.\n",
+    "People are conductive materials.\n",
+    "This is why people sometimes experience\n",
+    "[peripheral nerve stimulation (PNS)](https://mriquestions.com/nerve-stimulation.html)\n",
+    "in MRI machines.\n",
+    "Modern MRI hardware is capable of driving faster magnetic field changes,\n",
+    "but they have build-in safety controls that limit on how fast the graidents can change to prevent dangerous levesl of PNS.\n",
+    "Innovations in how to span k-space with slower changes in gradient fields\n",
+    "and magnetic gradient hardware that only spans the head,\n",
+    "rather than the entire scanner bore,\n",
+    "are some ways MRI physicists are working to shorten readout times.\n",
+    "\n",
+    "\n",
+    "More information on what to consider when setting multi-echo fMRI parameters is in the [Practical Resources: Acquiring Multi-Echo Data](./Acquiring_Multi_Echo_Data.html) section."
    ]
   }
  ],
